--- a/frontend/src/components/pages/Home/sections/Hero/Hero.css
+++ b/frontend/src/components/pages/Home/sections/Hero/Hero.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
+  gap: 10px;
 }
 
 .avatar {
@@ -55,7 +55,9 @@
 .tech-stack {
   display: flex;
   gap: 8px;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 16px;
 }
 
 .tech-badge {
@@ -64,6 +66,7 @@
   border-radius: 20px;
   font-size: 14px;
   font-weight: 500;
+  cursor: pointer;
   color: var(--text-secondary);
   transition: all 0.2s ease;
 }
@@ -77,13 +80,17 @@
 /* các button */
 .hero-actions {
   margin-top: 10px;
+  padding: 5px 24px;
   display: flex;
-  gap: 30px;
+  gap: 18px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .btn {
   display: inline-block;
-  padding: 10px 16px;
+  padding: 5px 24px;
+  font-weight: 500;
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, .12);
   background: #f3f4f6;
@@ -119,8 +126,14 @@
     margin-left: 24px;
   }
 
+  .tech-stack {
+    padding-left: 0;
+    justify-content: flex-start;
+  }
+
   .hero-actions {
-    gap: 14px;
+    padding-left: 0;
+    justify-content: flex-start;
   }
 
   .social-links {
