--- a/frontend/src/components/pages/Home/sections/Projects/Projects.css
+++ b/frontend/src/components/pages/Home/sections/Projects/Projects.css
@@ -142,7 +142,7 @@ body.dark .period {
 
     .cards {
         gap: 20px;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
         padding: 0;
     }
 }
